objects/Zip_Code__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>This is the city related to Zipcode</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country Related to Zipcode</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dealer_Install_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will let to know that Dealer Install Available or not for the related zipcode</description>
        <label>Is Dealer Install Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pro-Install Availalble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pro_Level__c</fullName>
        <label>Pro Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Install Availalble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Price__c</fullName>
        <label>Shipping Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>creditchecker__States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unlicensed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlicensed</label>
        <type>Checkbox</type>
    </fields>
    <label>Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Pro_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>94133</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Duplicate_Zipcode_Entries</fullName>
        <active>true</active>
        <description>This rule will restrict entry of duplicate zipcodes.</description>
        <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Zip_Code__c.Fields.Name, 
        $ObjectType.Zip_Code__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
        <errorMessage>Zipcode already exists.</errorMessage>
    </validationRules>
</CustomObject>